# cmpapp

./: .gitignore  amper.bat  project.yaml  readme.md
android-app/: module.yaml
android-app/src/: AndroidManifest.xml  MainActivity.kt  Test.kt
common/: module.yaml
common/src/fake_data/: Comment.kt  FollowsUser.kt  Post.kt  Profile.kt
common/src/model/: Auth.kt  Dept.kt  Follows.kt  Post.kt
common/src/repository/: FollowsRepository.kt  PostRepository.kt  UserRepository.kt
common/src/util/: IdGenerator.kt  Result.kt
gradle/: libs.versions.toml
jvm-app/: module.yaml
jvm-app/src/: Main.kt
rs_lib/: ReadMe.md  genKt.bat  module.yaml
rs_lib/resources/: rslib.dll.exp
rs_lib/src/: lib.rs
rs_lib/test/: testAdd.kt
rslib/: Cargo.toml  ReadMe.md  build.rs  module.yaml
rslib/resources/: rslib.d  rslib.dll.lib  uniffi-bindgen.d
rslib/src/: lib.rs  rslib.udl
rslib/src/aha/models/: mod.rs
rslib/src/aha/models/deepseek_ocr/: config.rs  model.rs  processor.rs
rslib/src/aha/models/hunyuan_ocr/: generate.rs  processor.rs
rslib/src/aha/models/minicpm4/: config.rs  model.rs
rslib/src/aha/models/voxcpm/: audio_vae.rs  config.rs  generate.rs  minicpm4.rs  tokenizer.rs
rslib/src/aha/position_embed/: rope.rs
rslib/src/aha/utils/: audio_utils.rs  mod.rs
server/: module.yaml
server/resources/: application.yaml
server/src/: Application.kt
shared/: module.yaml
shared/src/: World.kt
shared/src@android/: World.kt
shared/src@jvm/: World.kt
shared/test@jvm/: JvmWorldTest.kt
sunofbeach/: module.yaml
sunofbeach/src/: Main.kt
(+183 files in other folders)
