[package]
name = "rslib"
version = "0.1.0"
edition = "2024"

[dependencies]
# burn = { version = "0.19.1", features = ["wgpu"] }
uniffi = { version = "0.29",features = [ "cli" ] }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
candle-flash-attn = {  version = "0.9.1", optional = true }
serde = "1.0.226"
serde_json = "1.0.145"
anyhow = "1.0.100"
image = "0.25.8"
reqwest = { version = "0.12.23", features = ["blocking"] }
base64 = "0.22.1"
num = "0.4.3"
minijinja = "2.12.0"
tokenizers = "0.22.1"
aha_openai_dive = {version = "1.3.2", features = ["stream"]}
uuid = { version = "1.18.1", features = ["v4"]}
chrono = "0.4.42"
tokio = "1.47.1"
hound = "3.5.1"
clap = { version = "4.5.51", features = ["derive"] }
modelscope = "0.1.0"
dirs = "6.0.0"
url = "2.5.7"
lazy_static = "1.5.0"

[build-dependencies]
uniffi = { version = "0.29",features = [ "build" ] }

[lib]
crate-type = ["cdylib","staticlib"]
name = "rslib"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
